feat: creat delete category api
